--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.47",
+    "vue-lazyload": "^3.0.0-rc.2",
     "vue-meta": "^2.4.0",
     "vue-router": "^4.0.3"
   },
